@@ -42,8 +42,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import static java.lang.String.format;
 import static java.util.Objects.nonNull;
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
@@ -162,7 +160,7 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
             List<UpdatePartyDetailsForm> expertsWithoutPartyId = unwrapElements(caseData.getUpdateDetailsForm().getUpdateExpertsDetailsForm())
                 .stream()
                 .filter(e -> e.getPartyId() == null)
-                .collect(Collectors.toList());
+                .toList();
 
             if (!expertsWithoutPartyId.isEmpty()) {
                 errors.add(CREATE_ORDER_ERROR_EXPERTS);
@@ -187,7 +185,7 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
             List<UpdatePartyDetailsForm> witnessesWithoutPartyId = unwrapElements(caseData.getUpdateDetailsForm().getUpdateWitnessesDetailsForm())
                 .stream()
                 .filter(e -> e.getPartyId() == null)
-                .collect(Collectors.toList());
+                .toList();
 
             if (!witnessesWithoutPartyId.isEmpty()) {
                 errors.add(CREATE_ORDER_ERROR_WITNESSES);
@@ -224,6 +222,8 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
             userInfo.getUid()
         );
 
+        final String invalidParticipants = "Invalid participants";
+
         if (isAdmin) {
             switch (multiPartyScenario) {
                 case ONE_V_ONE -> {
@@ -243,14 +243,14 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
                     addDefendant1Options(dynamicListOptions, caseData, true);
                     addDefendant2Options(dynamicListOptions, caseData, true);
                 }
-                default -> throw new CallbackException("Invalid participants");
+                default -> throw new CallbackException(invalidParticipants);
             }
         } else if (isApplicantSolicitor(roles)) {
             switch (multiPartyScenario) {
                 case ONE_V_ONE, ONE_V_TWO_ONE_LEGAL_REP, ONE_V_TWO_TWO_LEGAL_REP ->
                     addApplicant1Options(dynamicListOptions, caseData, false);
                 case TWO_V_ONE -> addApplicantOptions2v1(dynamicListOptions, caseData, false);
-                default -> throw new CallbackException("Invalid participants");
+                default -> throw new CallbackException(invalidParticipants);
             }
         } else if (isRespondentSolicitorOne(roles)) {
             switch (multiPartyScenario) {
@@ -258,7 +258,7 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
                     addDefendant1Options(dynamicListOptions, caseData, false);
                 case ONE_V_TWO_ONE_LEGAL_REP ->
                     addDefendantOptions1v2SameSolicitor(dynamicListOptions, caseData, false);
-                default -> throw new CallbackException("Invalid participants");
+                default -> throw new CallbackException(invalidParticipants);
             }
         } else if (isRespondentSolicitorTwo(roles)
             && ONE_V_TWO_TWO_LEGAL_REP.equals(multiPartyScenario)) {
@@ -366,14 +366,10 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
     }
 
     private Boolean partyHasLitigationFriend(String partyChosen, CaseData caseData) {
-        if (hasLitigationFriend(CLAIMANT_ONE_ID, partyChosen, caseData.getApplicant1LitigationFriendRequired())
+        return hasLitigationFriend(CLAIMANT_ONE_ID, partyChosen, caseData.getApplicant1LitigationFriendRequired())
             || hasLitigationFriend(CLAIMANT_TWO_ID, partyChosen, caseData.getApplicant2LitigationFriendRequired())
             || hasLitigationFriend(DEFENDANT_ONE_ID, partyChosen, caseData.getRespondent1LitigationFriend())
-            || hasLitigationFriend(DEFENDANT_TWO_ID, partyChosen, caseData.getRespondent2LitigationFriend())
-        ) {
-            return true;
-        }
-        return false;
+            || hasLitigationFriend(DEFENDANT_TWO_ID, partyChosen, caseData.getRespondent2LitigationFriend());
     }
 
     private Boolean hasLitigationFriend(String id, String partyChosen, YesOrNo litigationFriend) {
@@ -560,7 +556,7 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
         return ofNullable(experts)
             .orElse(Experts.builder().build())
             .toBuilder()
-            .expertRequired(mappedExperts.size() >= 1 ? YES : NO)
+            .expertRequired(mappedExperts.isEmpty() ? NO : YES)
             .details(mappedExperts).build();
     }
 
@@ -568,7 +564,7 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
         return ofNullable(witnesses)
             .orElse(Witnesses.builder().build())
             .toBuilder()
-            .witnessesToAppear(mappedWitnesses.size() >= 1 ? YES : NO)
+            .witnessesToAppear(mappedWitnesses.isEmpty() ? NO : YES)
             .details(mappedWitnesses).build();
     }
 
@@ -681,8 +677,8 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
 
     private SubmittedCallbackResponse buildConfirmation(CallbackParams callbackParams) {
         return SubmittedCallbackResponse.builder()
-            .confirmationHeader(format("# Contact information changed"))
-            .confirmationBody(format("### What happens next\nAny changes made to contact details have been updated in the Claim Details tab."))
+            .confirmationHeader("# Contact information changed")
+            .confirmationBody("### What happens next%nAny changes made to contact details have been updated in the Claim Details tab.")
             .build();
     }
 
@@ -709,18 +705,11 @@ public class ManageContactInformationCallbackHandler extends CallbackHandler {
     }
 
     private boolean showLitigationFriendUpdateWarning(String partyChosen, CaseData caseData) {
-        if ((CLAIMANT_ONE_LITIGATION_FRIEND_ID.equals(partyChosen) || CLAIMANT_TWO_LITIGATION_FRIEND_ID.equals(partyChosen))
-            && bothClaimantsHaveLitigationFriends(caseData)) {
-            return true;
-        }
-
-        if ((DEFENDANT_ONE_LITIGATION_FRIEND_ID.equals(partyChosen) || DEFENDANT_TWO_LITIGATION_FRIEND_ID.equals(partyChosen))
+        return ((CLAIMANT_ONE_LITIGATION_FRIEND_ID.equals(partyChosen) || CLAIMANT_TWO_LITIGATION_FRIEND_ID.equals(partyChosen))
+            && bothClaimantsHaveLitigationFriends(caseData))
+            || ((DEFENDANT_ONE_LITIGATION_FRIEND_ID.equals(partyChosen) || DEFENDANT_TWO_LITIGATION_FRIEND_ID.equals(partyChosen))
             && ONE_V_TWO_ONE_LEGAL_REP.equals(getMultiPartyScenario(caseData))
-            && bothDefendantsHaveLitigationFriends(caseData)) {
-            return true;
-        }
-
-        return false;
+            && bothDefendantsHaveLitigationFriends(caseData));
     }
 
     private boolean bothClaimantsHaveLitigationFriends(CaseData caseData) {
